DO316-v4.16/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-http
  namespace: banana
spec:
  podSelector:
    matchLabels:
      env: production
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              name: client-ns
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
